# sf_dlgo_class

./: .gitignore  README.md  ac_v1.hdf5  init_ac_agent_V2.py  pyproject.toml  requirements.txt  run_network_v2.py  self_play_ac.py  sf_dlgo_class.code-workspace  web_demo.py  web_mcts.py  zero_demo_v2.py
chapter_6_cnn/: mcts_go_cnn.py  mcts_go_cnn_simple.py
dlgo/: kerasutil.py
dlgo/nn/: layers.py  layers_v2.py  lnn.py  load_mnist.py  network.py  run_network.py
dlgo/rl/: ac.py
dlgo/web/: __init__.py  server.py
dlgo/web/static/: play_random_99.html
dlgo/zero/: agent.py
