[tool.poetry]
name = "sf-dlgo-class"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
keras = "^3.3.2"
tensorflow = "^2.16.1"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
six = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

